Fixed bug #35817 (unpack() does not decode odd number of hexadecimal values)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@203837 c90b9560-bf6c-de11-be94-00142212c4b1